PHOENIX-1556 Base hash versus sort merge join decision on cost